--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+/* ...........................................................
+
+
+
+
+Use this template only for your own personal use; it cannot be used for business purposes without the owner's knowledge.
+
+
+                                    ##############################################
+                         ##############################################
+
+
+This agency template was lovingly created from the ground up
+by Khaled Elhannat.
+( Email me or connect with me on Linkedin )
+
+                    
+
+
+....................................................................*/
+
+
 /* Start Variables */
 :root {
     --main-color: rgb(0, 0, 0);
@@ -27,6 +49,11 @@
 
 body {
     font-family: 'Kdam Thmor Pro', sans-serif;
+    position: relative
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 .container {
@@ -77,10 +104,10 @@ body {
 /* srart component */
 .special-heading {
     color: #9b929370;
-    font-size: 100px;
+    font-size: 88px;
     text-align: center;
     font-weight: bolder;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
     margin: 0;
 }
 
@@ -542,3 +569,129 @@ body {
 }
 
 /* end About */
+
+/* conntacts */
+.contacts {
+    padding-top: var(--section-padding);
+    padding-bottom: calc(var(--section-padding) + 60px);
+    margin-bottom: 35px;
+}
+
+.contacts .info {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center;
+}
+
+.contacts .info .label {
+    font-size: 40px;
+    font-weight: 800;
+    color: #1c1c1c;
+    letter-spacing: 2px;
+}
+
+.contacts .info .link {
+    display: block;
+    font-size: 36px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #7e7942;
+}
+
+.contacts .info .social {
+    display: flex;
+    justify-content: center;
+    margin-top: 4rem;
+    font-size: 30px;
+    align-items: center;
+    color: #535353;
+
+}
+
+.contacts .info .social i {
+    margin-left: 20px;
+    color: #535353;
+}
+
+@media (max-width: 767px) {
+
+    .contacts .info .label {
+        font-size: 20px;
+    }
+
+    .contacts .info .link {
+        font-size: 25px;
+    }
+
+    .contacts .info .social {
+        font-size: 15px;
+    }
+}
+
+/* end of contacts */
+
+/* footer  */
+.footer {
+    background-color: #464646;
+    color: whitesmoke;
+    padding: 30px 10px;
+    text-align: center;
+    font-size: 17px;
+}
+
+.footer .copy {
+    font-size: 25px;
+}
+
+.footer .num {
+    font-weight: 900;
+}
+
+/*end of footer  */
+
+/* my signature */
+
+.footer .sig {
+    font-family: 'Caveat', cursive;
+}
+
+.footer .sig h3 {
+    line-height: 1.5;
+    margin-top: 30px;
+    color: #ff9a52;
+    font-size: 30px;
+    margin-bottom: 0;
+}
+
+.footer .sig h3 a {
+    text-decoration: auto;
+    color: #dc3545;
+
+}
+
+/* end of my signature */
+
+
+
+
+
+/* ...........................................................
+
+
+
+
+Use this template only for your own personal use; it cannot be used for business purposes without the owner's knowledge.
+
+
+                                    ##############################################
+                         ##############################################
+
+                         
+This agency template was lovingly created from the ground up
+by Khaled Elhannat.
+( Email me or connect with me on Linkedin )
+
+                    
+
+
+....................................................................*/
